--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "cp -r ./bash/lib/* ./node_modules/@gql2ts/ && rm -rf ./node_modules/graphql-rabbitmq-subscriptions/node_modules",
-    "start:ts": "ts-node index.ts",
-    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/main.ts",
+    "start:ts": "ts-node src/main.ts",
+    "start": "npm run start:ts",
+    "start:watch":"nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/main.ts",
     "start:force": "docker restart ganache-cli-tests && npm run truffle-migrate && npm run start:ts",
     "start:prod": "npm run truffle-migrate && pm2-docker process.yml --only APP",
     "lint": "tslint -c tslint.json 'graphql/**/*.{ts,tsx}'",
     "pretest": "npm run lint",
     "test": "npm run generate:typings || true && jest",
-    "start:watch": "pm2 start index.ts --watch",
+    "start:watch:pm2": "pm2 start index.ts --watch",
     "debug": "ts-node --inspect index.ts",
     "stop:docker": "docker stop anti-theft-api-prod",
     "start:docker": "docker-compose -p anti-theft-api-prod up --force-recreate -d",
@@ -36,7 +37,7 @@
     "fse": "^4.0.0",
     "gapi": "git+ssh://git@gitlab.youvolio.com:522/open-source/gapi.git",
     "gql2ts": "^1.4.0",
-    "graphql": "^0.12.3",
+    "graphql": "^0.13.1",
     "graphql-rabbitmq-subscriptions": "^1.1.0",
     "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.14.1",
