--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,60 @@
 version: '2'
 services:
 
+  nginx:
+    image: sameersbn/nginx:1.10.1-5
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/config:/etc/nginx
+      - ./nginx/html:/usr/share/nginx/html/
+      - ./nginx/certs:/usr/share/certs
+    restart: always
+    networks:
+      default:
+        ipv4_address: 182.10.0.2
+
   api:
-    image: gapi/api/master:latest
+    image: gapi/api/prod:latest
     ports:
       - "9000:9000"
     environment:
       - NODE_ENV=production
       - API_PORT=9000
+      - GRAPHIQL_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRhNGVuc3RvcmVAZ21haWwuY29tIiwic2NvcGUiOlsiQURNSU4iXSwiaWQiOjIsImlhdCI6MTUxMTk3NDkzNX0.M9PnW2IrVp4XGRvbzFrl0tx6vqs6oXItFK-wF5roneI
+      - AMQP_HOST=172.10.0.4
+      - AMQP_PORT=5672
+      - CERT_PATH=
+
+      # Local db config
       - DB_HOST=172.10.0.10
       - DB_PORT=5432
       - DB_NAME=antitheft
       - DB_USERNAME=dbuser
       - DB_PASSWORD=dbuserpass
-      - DB_HOST_PROD=tachenstore.ckffxbb4tx28.us-east-2.rds.amazonaws.com
+      
+      # Production db config
+      - DB_HOST_PROD=yourPostgressAWSaddress.ckffxbb4tx38.us-east-2.rds.amazonaws.com
       - DB_PORT_PROD=5432
       - DB_NAME_PROD=postgres
       - DB_USERNAME_PROD=dbuser
       - DB_PASSWORD_PROD=dbuserpass
-      - GRAPHIQL_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRhNGVuc3RvcmVAZ21haWwuY29tIiwic2NvcGUiOlsiQURNSU4iXSwiaWQiOjIsImlhdCI6MTUxMTk3NDkzNX0.M9PnW2IrVp4XGRvbzFrl0tx6vqs6oXItFK-wF5roneI
-      - ETHEREUM_API=http://172.10.0.67:8545
-      - AMQP_HOST=172.10.0.4
-      - AMQP_PORT=5672
+
     restart: always
     mem_limit: 1000000000
     cpu_shares: 73
     container_name: gapi-api-prod
-
+    depends_on:
+      - nginx
     networks:
       default:
-        ipv4_address: 172.10.0.166
+        ipv4_address: 182.10.0.3
 
 networks:
   default:
-    external:
-      name: nginx_vpcbr
-
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 182.10.0.0/16
+         gateway: 182.10.0.1
