--- a/process.yml
+++ b/process.yml
@@ -1,5 +1,5 @@
 apps:
-  - script   : './src/main.js'
+  - script   : './src/main.ts'
     name     : 'APP'
     exec_mode: 'cluster'
-    instances: 1
+    instances: 4
