chore(Package.json): nodemon configuration added instead of passing as arguments from cli

--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   },
   "nodemonConfig": {
     "ignore": [
-      "test/*",
-      "docs/*"
+      "./src/**/*.spec.ts"
     ],
     "verbose": true,
-    "exec": "ts-node server/server.app.ts",
+    "exec": "ts-node ./src/main.ts",
     "watch": [
-      "server"
+      "./src/**/*.ts"
     ],
     "ext": "ts"
   }
