--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - ./nginx/html:/usr/share/nginx/html/
       - ./nginx/certs:/usr/share/certs
     restart: always
+    container_name: gapi-api-nginx
     networks:
-      default:
+      gapi:
         ipv4_address: 182.10.0.2
 
   api:
@@ -40,11 +41,12 @@ services:
     container_name: gapi-api-prod
     depends_on:
       - nginx
+      - rabbitMq
     networks:
-      default:
+      gapi:
         ipv4_address: 182.10.0.3
 
-  rabbitmq:
+  rabbitMq:
     image: rabbitmq:3.7.2
     ports:
       - "15672:15672"
@@ -54,11 +56,11 @@ services:
     restart: always
     container_name: gapi-api-rabbitmq
     networks:
-      default:
+      gapi:
         ipv4_address: 182.10.0.5
 
 networks:
-  default:
+  gapi:
     driver: bridge
     ipam:
      config:
