feature(schema-introspection): added cli feature introspect

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "watch": [
       "./src/**/*.ts"
     ],
+    "events": {
+      "restart": "sleep 1 && gapi schema introspect"
+    },
     "ext": "ts"
   },
   "jest": {
