retouch(): some things retouched to be more precise

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,12 @@
         "preserveConstEnums": true,
         "sourceMap": true,
         "strictNullChecks": false,
-        "forceConsistentCasingInFileNames": false,
-        "noFallthroughCasesInSwitch": false,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
         "noImplicitAny": false,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "noUnusedLocals": false,
+        "noUnusedLocals": true,
         "noUnusedParameters": false,
         "lib": [
             "es2017",
