--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gapi-starter",
-  "version": "0.7.3",
+  "name": "@gapi/starter-basic",
+  "version": "0.7.4",
   "description": "",
   "main": "index.js",
   "scripts": {
