--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   "author": "Kristiyan Tachev",
   "license": "MIT",
   "dependencies": {
-    "@gapi/cli": "^0.7.297",
-    "@gapi/core": "git+https://github.com/Stradivario/gapi-core",
-    "ts-node": "^5.0.1",
-    "typescript": "^2.7.1"
+    "@gapi/cli": "git+https://github.com/Stradivario/gapi-cli",
+    "@gapi/auth": "git+https://github.com/Stradivario/gapi-auth.git",
+    "@gapi/core": "git+https://github.com/Stradivario/gapi-core"
   },
   "devDependencies": {
     "@types/jest": "^22.2.0",
@@ -32,7 +31,10 @@
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "ts-jest": "^22.4.1",
-    "ts-lint": "^4.5.1"
+    "ts-lint": "^4.5.1",
+    "typescript": "^2.7.1",
+    "@types/node": "^10.5.1",
+    "ts-node": "^5.0.1"
   },
   "nodemonConfig": {
     "ignore": [
