--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gapi/starter-simple",
-  "version": "1.2.15",
+  "version": "1.2.16",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,9 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "@gapi/core": "^1.2.15"
-  },
-  "peerDependencies": {
-    "@gapi/cli": "^1.2.15"
   },
   "ipfs": [
     {
@@ -41,7 +38,7 @@
     "ext": "ts"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.9.7",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.1",
+    "@gapi/cli": "^1.2.15"
   }
 }
