--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": false,
         "noImplicitReturns": true,
-        "noImplicitThis": true,
+        "noImplicitThis": false,
         "noUnusedLocals": true,
         "noUnusedParameters": false,
         "lib": [
