--- a/package.json
+++ b/package.json
@@ -21,20 +21,19 @@
   "author": "Kristiyan Tachev",
   "license": "MIT",
   "dependencies": {
-    "@gapi/cli": "^1.4.61",
     "@gapi/auth": "^1.4.61",
     "@gapi/core": "^1.4.61"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.0",
-    "graphql-tester": "0.0.5",
-    "jest": "^22.4.2",
-    "jest-cli": "^22.4.2",
-    "ts-jest": "^22.4.1",
+    "@types/graphql": "^14.0.7",
+    "@types/jest": "^24.0.9",
+    "@types/node": "^11.10.4",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
+    "ts-jest": "^24.0.0",
     "ts-lint": "^4.5.1",
-    "typescript": "3.0.1",
-    "@types/node": "^10.5.1",
-    "ts-node": "^5.0.1"
+    "ts-node": "^8.0.2",
+    "typescript": "3.3.3333"
   },
   "nodemonConfig": {
     "ignore": [
@@ -45,7 +44,6 @@
     "watch": [
       "./src/**/*.ts"
     ],
-    "events": {},
     "ext": "ts"
   },
   "jest": {
