--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "author": "Kristiyan Tachev",
   "license": "MIT",
   "dependencies": {
-    "@gapi/auth": "^1.4.75",
-    "@gapi/core": "^1.4.75"
+    "@gapi/auth": "^1.4.78",
+    "@gapi/core": "^1.4.78",
+    "@types/hapi": "^18.0.1"
   },
   "devDependencies": {
     "@gapi/cli": "^1.4.75",
