--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gapi/starter-basic",
-  "version": "1.7.7",
+  "version": "1.7.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "@types/hapi": "^18.0.1"
   },
   "devDependencies": {
+    "@gapi/cli": "^1.7.8",
     "@types/graphql": "^14.0.7",
     "@types/jest": "^24.0.9",
     "@types/node": "^11.10.4",
